
  - a computational bug sent the wrong latitude/longitude to the emulated
    system, resulting in coordinates that could be off from 500 to 1000 meters.

  - fixed another bug that didn't report the altitude correctly.

  - added a fourth, optional, parameter to indicate the number of tracked
    satellites to emulate. The number must be an integer between 1 and 12,
    (1 is the default).

 - Add a PulseAudio audio backend on Linux. It will be used by default
   unless it's impossible to connect to the PA daemon.

 - It is now possible to access the QEMU monitor from the console.
   Just type "qemu monitor" and you will be at the monitor prompt.

   Note that the monitor 'quit' command will not stop the emulator,
   but will simply close the connection instead.

==============================================================================
Changes between 7.0 and 6.0

IMPORTANT CHANGES:

OTHER:

- Removed audio stack SDL dependency.

- Add a '-shared-net-id' option which allows emulators to join a shared network.
  This allows testing situations where emulators need to communicate directly
  with each other. See '-help-shared-net-id' for more details.

- Fix net shaping regression: -netspeed and -netdelay did not work anymore.

==============================================================================
Changes between 6.0 and 5.0

IMPORTANT CHANGES:

- Add a '-memcheck' option to instrument memory reads/writes at runtime in
  order to detect buffer under/overflows. This requires a new version of the
  C library that is only available in Froyo and above.

- Fix '-http-proxy' on Win32. This was actually a regression introduced
  with the Donut SDK.

OTHER:

- Add a '--static' option to both android-configure.sh and android-rebuild.sh
  in order to build a completely static executable. This is required to run
  the emulator in restricted environments. No audio and graphics in this mode
  so using '-no-window' is required.
