@@ -59,6 +59,11 @@ OTHER:
     satellites to emulate. The number must be an integer between 1 and 12,
     (1 is the default).
 
+  - fixed a bug in parameter handling: the implementation disagreed with the
+    documentation, requiring an additional dummy fourth argument. Now four or
+    five parameters are accepted (for backwards compatibility), but the last is
+    always the satellite count.
+
  - Add a PulseAudio audio backend on Linux. It will be used by default
    unless it's impossible to connect to the PA daemon.
 
